# argos

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile.airflow  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: ecb_ingestion.py  fred_ingestion.py  hello_argos.py  test_argos_import.py
alembic/: env.py
alembic/versions/: 596d1786d618_create_economic_series_and_economic_.py  801e7c0c0697_initial_schema_with_sources_properties_.py  9850c5403551_make_fred_series_notes_column_nullable.py  a1249bd9adc2_add_fred_series_and_fred_observations_.py  ab336d3d2413_backfill_economic_tables_from_fred_data.py  ed892e36f992_drop_legacy_fred_series_and_fred_.py
scripts/: test_fred_ingestion.py
src/argos/: __init__.py  config.py
src/argos/ingestion/: http.py
src/argos/ingestion/ecb/: __init__.py  client.py  models.py  period.py  persistence.py
src/argos/ingestion/fred/: __init__.py  client.py  models.py  persistence.py  series.py
src/argos/storage/: base.py  database.py  object_store.py  paths.py  raw_data.py
src/argos/storage/models/: __init__.py  listing.py  property.py  source.py
src/argos/storage/models/economic/: __init__.py  observation.py  series.py
src/argos/storage/models/fred/: __init__.py  observation.py  series.py
tests/: conftest.py
tests/integration/: test_ecb_persistence.py  test_persistence.py
tests/unit/: test_models.py  test_paths.py  test_period.py
