[project]
name = "argos"
version = "0.1.0"
description = "Real estate intelligence platform for the Greek market: live listings, objective values and fair-price forecasting."
readme = "README.md"
authors = [
    { name = "Panagiotis-Andriano", email = "panagiotis.andrianopoulos23@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
]
license = { text = "MIT" }
keywords = ["real-estate", "machine-learning", "data-engineering", "greece", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
argos = "argos:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.11",
]

# ============================================================
# Ruff configuration
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "notebooks",
    "dbt/target",
    "airflow/logs",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (common bugs)
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (modern Python syntax)
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__.py
"tests/**/*.py" = ["S101"]  # asserts OK in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ============================================================
# Mypy configuration
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
exclude = [
    "\\.venv",
    "notebooks",
    "dbt/target",
    "tests",  # relaxed for tests in the beginning
    "alembic",  # autogenerated migration scripts
]

[[tool.mypy.overrides]]
module = [
    "scrapy.*",
    "playwright.*",
    "airflow.*",
]
ignore_missing_imports = true
